caller/deployment.yaml
kind: Deployment
apiVersion: "apps/v1"
metadata: 
 name: "caller-service"
 labels: 
  app: "caller-service"
spec: 
 replicas: 1
 selector: 
  matchLabels: 
   app: "caller-service"
 template: 
  metadata: 
   labels: 
    app: "caller-service"
  spec: 
   containers: 
    - name: "caller"
      image: "docker.io/cereus725/caller-service:v1"
      imagePullPolicy: Always
      ports: 
       - containerPort: 8090
      resources: 
       limits:
