caller/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: "caller-service"
  labels:
    app: "caller-service"
spec:
  to:
    kind: Service
    name: caller-service
    weight: 100
  port:
    targetPort: http
  wildcardPolicy: None
